gradle: add docker build and push tasks